# ozdf

./: .gitignore  CLAUDE.md  LICENSE  README.md  ozdf_cheatsheet.txt  pyproject.toml
documentation/: example conversation.ozdf  example raw text.ozdf  ozdf library example usage.txt  read_example_conversation.py  specification.txt
ozdf/: __init__.py  io.py  models.py  normalization.py  parser.py
tests/: test_80_char_wrapping.py  test_read_corpus.py  test_read_documents.py  test_write_corpus.py  test_write_directory_documents.py
tests/fixtures/corpus_iteration/test_corpus1/: test_document2.ozdf
tests/fixtures/corpus_with_corrupted_document/corrupted_doc/: _metadata.ozdf
tests/fixtures/corpus_with_corrupted_document/valid_doc/: _metadata.ozdf
tests/fixtures/corpus_with_corrupted_document_only_writing_marker/: simple.ozdf
tests/fixtures/corrupted_directory_document/: _metadata.ozdf
tests/fixtures/read_corpus/test_corpus1/: test_document1.ozdf
tests/fixtures/read_directory_document/directory_doc/: MESSAGES-01.ozdp  MESSAGES-02.ozdp  MESSAGES-03.ozdp  _metadata.ozdf
tests/fixtures/read_simple_document/: simple.ozdf
tests/fixtures/save_directory_document/corpus1/directory_doc/: MESSAGES-01.ozdp  _metadata.ozdf
